@@ -1,6 +1,5 @@
 package snownee.kiwi.test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -15,6 +14,7 @@ import snownee.kiwi.config.KiwiConfig.Range;
 @KiwiConfig(value = "test", type = ConfigType.COMMON)
 public class TestConfig {
 
+	@KiwiConfig.PerformanceImpact(KiwiConfig.PerformanceType.HIGH)
 	public static int intValue = 5;
 
 	@Range(min = 0, max = 114514)
@@ -30,7 +30,7 @@ public class TestConfig {
 
 	@Typed(String.class)
 	@TextDescription(value = "1\n2\n3", after = true)
-	public static List<String> listValue = Arrays.asList("test");
+	public static List<String> listValue = List.of("test");
 
 	@TextDescription("Test2")
 	public static String emptyStr;
